<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_label">fheroes2</string>
    <string name="activity_toolset_label">fh2 Toolset</string>
    <string name="activity_toolset_game_logo_img_content_description">fheroes2 logo</string>
    <string name="activity_toolset_game_status_lbl_text"><b>You cannot run the game at the moment, because some data files of the original game are missing.</b>\n\nPlease put the contents of the directory with the original Heroes of Might and Magic II game (or just <b>ANIM</b>, <b>DATA</b>, <b>MAPS</b> and <b>MUSIC</b> folders) into a ZIP archive, copy it to this device, press the \"<b>Extract HoMM2 assets</b>\" button and select this ZIP archive.\n\nIf you do not have a copy of the original game, you can download a ZIP archive of the demo version. Once the download is complete please press the \"<b>Extract HoMM2 assets</b>\" button and select the newly downloaded demo archive.</string>
    <string name="activity_toolset_start_game_btn_text">Start game</string>
    <string name="activity_toolset_extract_homm2_assets_btn_text">Extract HoMM2 assets</string>
    <string name="activity_toolset_import_gog_exe_btn_text">Import GOG installer (.exe)</string>
    <string name="activity_toolset_download_homm2_demo_btn_text">Download HoMM2 demo</string>
    <string name="activity_toolset_import_gog_exe_error_title">Import error</string>
    <string name="activity_toolset_import_gog_exe_error_message">An error occurred while trying to import the GOG installer.</string>
    <string name="activity_toolset_import_gog_exe_error_positive_btn_text">OK</string>
    <string name="activity_toolset_last_task_status_lbl_text_invalid_gog_file">The selected file is not a valid GOG / Inno Setup installer.</string>
    <string name="activity_toolset_save_file_manager_btn_text">Save file manager</string>
    <string name="activity_toolset_map_file_manager_btn_text">FH2M map file manager</string>
    <string name="activity_toolset_last_task_status_lbl_text_completed_successfully">Operation completed successfully.</string>
    <string name="activity_toolset_last_task_status_lbl_text_no_assets_found">Operation completed successfully, but no HoMM2 assets were found.</string>
    <string name="activity_toolset_last_task_status_lbl_text_failed">An error occurred during the operation: %s</string>
    <string name="activity_toolset_extract_homm2_assets_error_title">Extraction error</string>
    <string name="activity_toolset_extract_homm2_assets_error_message">An error occurred while trying to extract HoMM2 assets.</string>
    <string name="activity_toolset_extract_homm2_assets_error_positive_btn_text">OK</string>
    <string name="activity_toolset_download_homm2_demo_error_title">Download error</string>
    <string name="activity_toolset_download_homm2_demo_error_message">An error occurred while trying to download the HoMM2 demo. A possible reason is the lack of an installed application that can download files from the Internet. Please try to install such an application and try again.</string>
    <string name="activity_toolset_download_homm2_demo_error_positive_btn_text">OK</string>
    <string name="activity_toolset_homm2_demo_url" translatable="false">https://archive.org/download/HeroesofMightandMagicIITheSuccessionWars_1020/h2demo.zip</string>
    <string name="activity_save_file_manager_label">fh2 Save File Manager</string>
    <string name="activity_save_file_manager_filter_standard_btn_text">Standard</string>
    <string name="activity_save_file_manager_filter_campaign_btn_text">Campaign</string>
    <string name="activity_save_file_manager_filter_multiplayer_btn_text">Multi</string>
    <string name="activity_save_file_manager_save_file_list_empty_lbl_text">No save files available</string>
    <string name="activity_save_file_manager_select_all_btn_content_description">Select all save files</string>
    <string name="activity_save_file_manager_unselect_all_btn_content_description">Unselect all save files</string>
    <string name="activity_save_file_manager_import_btn_content_description">Import save files</string>
    <string name="activity_save_file_manager_export_btn_content_description">Export selected save files</string>
    <string name="activity_save_file_manager_delete_btn_content_description">Delete selected save files</string>
    <string name="activity_save_file_manager_last_task_status_lbl_text_no_save_files_found">Operation completed successfully, but no save files were found.</string>
    <string name="activity_save_file_manager_last_task_status_lbl_text_failed">An error occurred during the operation: %s</string>
    <string name="activity_save_file_manager_import_error_title">Import error</string>
    <string name="activity_save_file_manager_import_error_message">An error occurred while trying to import save files.</string>
    <string name="activity_save_file_manager_import_error_positive_btn_text">OK</string>
    <string name="activity_save_file_manager_no_files_selected_for_export_title">No files selected for export</string>
    <string name="activity_save_file_manager_no_files_selected_for_export_message">Please select the save files to export.</string>
    <string name="activity_save_file_manager_no_files_selected_for_export_positive_btn_text">OK</string>
    <string name="activity_save_file_manager_export_error_title">Export error</string>
    <string name="activity_save_file_manager_export_error_message">An error occurred while trying to export save files.</string>
    <string name="activity_save_file_manager_export_error_positive_btn_text">OK</string>
    <string name="activity_save_file_manager_no_files_selected_for_deletion_title">No files selected for deletion</string>
    <string name="activity_save_file_manager_no_files_selected_for_deletion_message">Please select the save files to delete.</string>
    <string name="activity_save_file_manager_no_files_selected_for_deletion_positive_btn_text">OK</string>
    <plurals name="activity_save_file_manager_delete_confirmation_title">
        <item quantity="one">Delete save file</item>
        <item quantity="other">Delete save files</item>
    </plurals>
    <plurals name="activity_save_file_manager_delete_confirmation_message">
        <item quantity="one">Are you sure you want to delete the selected file?</item>
        <item quantity="other">Are you sure you want to delete %d selected files?</item>
    </plurals>
    <string name="activity_save_file_manager_delete_confirmation_positive_btn_text">Yes</string>
    <string name="activity_save_file_manager_delete_confirmation_negative_btn_text">No</string>
    <string name="activity_save_file_manager_suggested_zip_file_name" translatable="false">fheroes2_save_files.zip</string>
    <string name="activity_map_file_manager_label">fh2 Map File Manager</string>
    <string name="activity_map_file_manager_map_file_list_empty_lbl_text">No map files available</string>
    <string name="activity_map_file_manager_select_all_btn_content_description">Select all map files</string>
    <string name="activity_map_file_manager_unselect_all_btn_content_description">Unselect all map files</string>
    <string name="activity_map_file_manager_import_btn_content_description">Import map files</string>
    <string name="activity_map_file_manager_export_btn_content_description">Export selected map files</string>
    <string name="activity_map_file_manager_delete_btn_content_description">Delete selected map files</string>
    <string name="activity_map_file_manager_last_task_status_lbl_text_no_map_files_found">Operation completed successfully, but no map files were found.</string>
    <string name="activity_map_file_manager_last_task_status_lbl_text_failed">An error occurred during the operation: %s</string>
    <string name="activity_map_file_manager_import_error_title">Import error</string>
    <string name="activity_map_file_manager_import_error_message">An error occurred while trying to import map files.</string>
    <string name="activity_map_file_manager_import_error_positive_btn_text">OK</string>
    <string name="activity_map_file_manager_no_files_selected_for_export_title">No files selected for export</string>
    <string name="activity_map_file_manager_no_files_selected_for_export_message">Please select the map files to export.</string>
    <string name="activity_map_file_manager_no_files_selected_for_export_positive_btn_text">OK</string>
    <string name="activity_map_file_manager_export_error_title">Export error</string>
    <string name="activity_map_file_manager_export_error_message">An error occurred while trying to export map files.</string>
    <string name="activity_map_file_manager_export_error_positive_btn_text">OK</string>
    <string name="activity_map_file_manager_no_files_selected_for_deletion_title">No files selected for deletion</string>
    <string name="activity_map_file_manager_no_files_selected_for_deletion_message">Please select the map files to delete.</string>
    <string name="activity_map_file_manager_no_files_selected_for_deletion_positive_btn_text">OK</string>
    <plurals name="activity_map_file_manager_delete_confirmation_title">
        <item quantity="one">Delete map file</item>
        <item quantity="other">Delete map files</item>
    </plurals>
    <plurals name="activity_map_file_manager_delete_confirmation_message">
        <item quantity="one">Are you sure you want to delete the selected file?</item>
        <item quantity="other">Are you sure you want to delete %d selected files?</item>
    </plurals>
    <string name="activity_map_file_manager_delete_confirmation_positive_btn_text">Yes</string>
    <string name="activity_map_file_manager_delete_confirmation_negative_btn_text">No</string>
    <string name="activity_map_file_manager_suggested_zip_file_name" translatable="false">fheroes2_map_files.zip</string>
</resources>
