<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <ToggleButton
            android:id="@+id/activity_save_file_manager_filter_standard_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:enabled="false"
            android:onClick="filterButtonClicked"
            android:textOff="@string/activity_save_file_manager_filter_standard_btn_text"
            android:textOn="@string/activity_save_file_manager_filter_standard_btn_text" />

        <ToggleButton
            android:id="@+id/activity_save_file_manager_filter_campaign_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:enabled="false"
            android:onClick="filterButtonClicked"
            android:textOff="@string/activity_save_file_manager_filter_campaign_btn_text"
            android:textOn="@string/activity_save_file_manager_filter_campaign_btn_text" />

        <ToggleButton
            android:id="@+id/activity_save_file_manager_filter_multiplayer_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:enabled="false"
            android:onClick="filterButtonClicked"
            android:textOff="@string/activity_save_file_manager_filter_multiplayer_btn_text"
            android:textOn="@string/activity_save_file_manager_filter_multiplayer_btn_text" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/activity_save_file_manager_save_file_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="multipleChoice" />

        <TextView
            android:id="@+id/activity_save_file_manager_save_file_list_empty_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/activity_save_file_manager_save_file_list_empty_lbl_text"
            android:textAllCaps="true"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <ImageButton
            android:id="@+id/activity_save_file_manager_select_all_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/btn_select_all"
            android:contentDescription="@string/activity_save_file_manager_select_all_btn_content_description"
            android:onClick="selectAllButtonClicked" />

        <ImageButton
            android:id="@+id/activity_save_file_manager_unselect_all_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_unselect_all"
            android:contentDescription="@string/activity_save_file_manager_unselect_all_btn_content_description"
            android:onClick="unselectAllButtonClicked" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/activity_save_file_manager_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@drawable/btn_delete"
            android:contentDescription="@string/activity_save_file_manager_delete_btn_content_description"
            android:onClick="deleteButtonClicked" />
    </LinearLayout>
</LinearLayout>
